--- a/frontend-author/src/components/pages/Post.css
+++ b/frontend-author/src/components/pages/Post.css
@@ -1,25 +1,25 @@
 .blog-text h1 {
-    @apply text-4xl font-bold;
-}
-
-.blog-text h2 {
     @apply text-3xl font-bold;
 }
 
-.blog-text h3 {
+.blog-text h2 {
     @apply text-2xl font-bold;
 }
 
-.blog-text h4 {
+.blog-text h3 {
     @apply text-xl font-bold;
 }
 
-.blog-text h5 {
+.blog-text h4 {
     @apply text-lg font-bold;
 }
 
-.blog-text h6 {
+.blog-text h5 {
     @apply text-base font-bold;
+}
+
+.blog-text h6 {
+    @apply text-sm font-bold;
 }
 
 .blog-text ul {
